implement getProducts
