# src/main/java/com/josko/store/presentation/controller/ProductsController.java
@@ -1,11 +1,13 @@
 package com.josko.store.presentation.controller;
 
 import com.josko.store.presentation.dto.ProductCreateDto;
+import com.josko.store.presentation.dto.ProductPageResponse;
 import com.josko.store.presentation.dto.ProductResponseDto;
 import com.josko.store.service.ProductService;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Pageable;
 import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -43,6 +45,20 @@ public class ProductsController implements ProductsApi {
 		return service.getProduct(id)
 				.map(ResponseEntity::ok)
 				.orElse(ResponseEntity.notFound().build());
-	} 
+	}
 	
+	@Override
+	public ResponseEntity<ProductPageResponse> getProducts(Pageable pageable) {
+		
+		logger.debug("Retrieving products with pageable {}", pageable);
+		
+		var products = service.getProducts(pageable);
+		
+		if (products.getContent().isEmpty()) {
+			return ResponseEntity.noContent().build();
+		}
+		
+		return ResponseEntity.ok(products);
+	}
+
 }
